[gd_scene load_steps=6 format=3 uid="uid://cn4sis57vp3si"]

[ext_resource type="Script" uid="uid://b4051mfw2bc5" path="res://scripts/player.gd" id="1_clim0"]
[ext_resource type="Script" uid="uid://lmy3nlbt6aqb" path="res://scripts/sample_game.gd" id="1_omkqs"]
[ext_resource type="Theme" uid="uid://cb2tqos08yhkd" path="res://assets/MinimalUI/MinimalUI.tres" id="2_nwagm"]
[ext_resource type="PackedScene" uid="uid://603k3vy4p3f1" path="res://scenes/settings.tscn" id="4_y4cq8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5c5i0"]
size = Vector2(32, 32)

[node name="SampleGame" type="Node2D"]
script = ExtResource("1_omkqs")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -192.0
offset_top = -200.0
offset_right = 1408.0
offset_bottom = 896.0
color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(576, 320)
motion_mode = 1
script = ExtResource("1_clim0")

[node name="Polygon2D" type="Polygon2D" parent="Player"]
polygon = PackedVector2Array(-16, -16, -16, 16, 16, 16, 16, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_5c5i0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_nwagm")

[node name="PauseMenu" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="CanvasLayer/Panel/PauseMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../Option")
theme = ExtResource("2_nwagm")
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="Option" type="Button" parent="CanvasLayer/Panel/PauseMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../MainMenu")
theme = ExtResource("2_nwagm")
theme_override_font_sizes/font_size = 24
text = "Option"

[node name="MainMenu" type="Button" parent="CanvasLayer/Panel/PauseMenu"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../Option")
focus_neighbor_bottom = NodePath("../Resume")
theme = ExtResource("2_nwagm")
theme_override_font_sizes/font_size = 24
text = "Main Menu
"

[node name="Settings" parent="CanvasLayer/Panel" node_paths=PackedStringArray("pre_scene") instance=ExtResource("4_y4cq8")]
visible = false
layout_mode = 1
pre_scene = NodePath("../../..")

[connection signal="pressed" from="CanvasLayer/Panel/PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/PauseMenu/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/PauseMenu/MainMenu" to="." method="_on_main_menu_pressed"]
